fix viewer alignment

--- a/cms/static/css/style.css
+++ b/cms/static/css/style.css
@@ -49,3 +49,7 @@ img {
 footer {
 	padding-left: 15px;
 }
+
+.col-md-9 {
+	flex: 0.50;
+}
